name:                aoc7
version:             0.1.0.0
synopsis:            
-- description:
homepage:            
license:             MIT
author:              Silvan Mosberger
maintainer:          infinisil@icloud.com
copyright:           2018 Silvan Mosberger
category:            
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  Readme.org
data-files:          input

executable aoc7
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Paths_aoc7
  default-language:    Haskell2010
  ghc-options:         -threaded -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers
                     , megaparsec
                     , MonadRandom
                     , directory
                     , mtl
